--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,7 @@ plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
 }
-
-apply plugin: 'distribution'
+apply plugin: 'application'
 mainClassName = "edu.handong.analysis.Main"
 
 repositories {
@@ -30,9 +29,13 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
-    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+	// https://mvnrepository.com/artifact/commons-cli/commons-cli
 	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+	// https://mvnrepository.com/artifact/net.sf.opencsv/opencsv
+ 	compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
+
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-csv
 	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+    
 }
